--- a/qpkg.cfg
+++ b/qpkg.cfg
@@ -28,9 +28,9 @@ QPKG_CONFLICT="CouchPotato"
 # Location of file with running service's PID
 #QPKG_SERVICE_PIDFILE=""
 # Relative path to web interface
-#QPKG_WEBUI=""
+QPKG_WEBUI="/"
 # Port number for the web interface.
-#QPKG_WEB_PORT=""
+QPKG_WEB_PORT="5050"
 # Port number for the ssl web interface.
 #QPKG_WEB_SSL_PORT=""
 
