updating package requirements

--- a/qpkg.cfg
+++ b/qpkg.cfg
@@ -16,6 +16,7 @@ QPKG_SERVICE_PROGRAM="CouchPotato.sh"
 
 # Specifies any packages required for the current package to operate.
 #QPKG_REQUIRE="Python >= 2.7, Optware | opkg, OPT/openssh"
+QPKG_REQUIRE="Python >= 2.7"
 # Specifies what packages cannot be installed if the current package
 # is to operate properly.
 #QPKG_CONFLICT="Python, OPT/sed"
